fixed vertical squishing

--- a/main.css
+++ b/main.css
@@ -24,16 +24,15 @@ http://griffis.edumedia.ca/mad9013/html-only/saturn.v1.jpg
     box-sizing: border-box;
 }
 html, body{
-    font-size: 3vh; /* default font-size = 1.0rem */
+    font-size: 1.5rem; /* default font-size = 1.0rem */
     background-color: #222;
     font-family: 'Helvetica Neue', 'Calibri', 'Verdana', 'sans-serif';
 }
 h1{
-    color: white;
+    color: #eee;
     text-align: center;
-    text-shadow: 2px 2px 1px #000, -2px -2px 1px gold;
+    text-shadow: 1px 1px 5px #000, -1px -1px 5px gold;
     font-size: 2.7rem;
-    font-family: sans-serif;
     line-height: 4;
 }
 h3{
@@ -52,7 +51,7 @@ nav a, nav a:link, nav a:visited{
     text-decoration: none;
     background: #444;
     display: block;
-    padding: 0.6rem .4rem;
+    padding: 0.6rem .3rem;
     text-align: center;
     
 }
@@ -62,7 +61,7 @@ nav a:hover, nav a:active{
 }
 nav ul{
   background-color: #666;
-  padding:0.3rem 0 2.8rem;
+  padding:0.3rem 0 2.9rem;
 
 }
 nav li{
@@ -78,7 +77,7 @@ nav li{
 }
 #masthead{
   background-image: url('img/saturn.v1.jpg');
-  height: 10rem;
+  height: 9.5rem;
     background-size: 30rem;
 
 }
